// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests > react/v2/internals/MenuList > Basic 1`] = `
<div>
  <div
    data-dark="false"
  >
    <ul
      class="charcoal-menu-list"
    >
      <li
        class="charcoal-list-item"
        data-key="0"
        role="option"
        tabindex="-1"
      >
        Menu 
        0
      </li>
      <li
        class="charcoal-list-item"
        data-key="1"
        role="option"
        tabindex="-1"
      >
        Menu 
        1
      </li>
      <li
        class="charcoal-list-item"
        data-key="2"
        role="option"
        tabindex="-1"
      >
        Menu 
        2
      </li>
      <li
        class="charcoal-list-item"
        data-key="3"
        role="option"
        tabindex="-1"
      >
        Menu 
        3
      </li>
      <li
        class="charcoal-list-item"
        data-key="4"
        role="option"
        tabindex="-1"
      >
        Menu 
        4
      </li>
      <li
        class="charcoal-list-item"
        data-key="5"
        role="option"
        tabindex="-1"
      >
        Menu 
        5
      </li>
      <li
        class="charcoal-list-item"
        data-key="6"
        role="option"
        tabindex="-1"
      >
        Menu 
        6
      </li>
      <li
        class="charcoal-list-item"
        data-key="7"
        role="option"
        tabindex="-1"
      >
        Menu 
        7
      </li>
      <li
        class="charcoal-list-item"
        data-key="8"
        role="option"
        tabindex="-1"
      >
        Menu 
        8
      </li>
      <li
        class="charcoal-list-item"
        data-key="9"
        role="option"
        tabindex="-1"
      >
        Menu 
        9
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storybook Tests > react/v2/internals/MenuList > Disabled 1`] = `
<div>
  <div
    data-dark="false"
  >
    <ul
      class="charcoal-menu-list"
    >
      <li
        class="charcoal-list-item"
        data-key="1"
        role="option"
        tabindex="-1"
      >
        MenuItem
      </li>
      <li
        aria-disabled="true"
        class="charcoal-list-item"
        data-key="2"
        role="option"
        tabindex="-1"
      >
        Disabled MenuItem
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storybook Tests > react/v2/internals/MenuList > Group 1`] = `
<div>
  <div
    data-dark="false"
  >
    <ul
      class="charcoal-menu-list"
    >
      <li
        class="charcoal-menu-item-group"
        role="presentation"
      >
        <span>
          Section1
        </span>
        <ul
          role="group"
        >
          <li
            class="charcoal-list-item"
            data-key="0"
            role="option"
            tabindex="-1"
          >
            Menu 
            0
          </li>
          <li
            class="charcoal-list-item"
            data-key="1"
            role="option"
            tabindex="-1"
          >
            Menu 
            1
          </li>
          <li
            class="charcoal-list-item"
            data-key="2"
            role="option"
            tabindex="-1"
          >
            Menu 
            2
          </li>
          <li
            class="charcoal-list-item"
            data-key="3"
            role="option"
            tabindex="-1"
          >
            Menu 
            3
          </li>
          <li
            class="charcoal-list-item"
            data-key="4"
            role="option"
            tabindex="-1"
          >
            Menu 
            4
          </li>
        </ul>
      </li>
      <li
        class="charcoal-menu-item-group"
        role="presentation"
      >
        <span>
          Section2
        </span>
        <ul
          role="group"
        >
          <li
            class="charcoal-list-item"
            data-key="5"
            role="option"
            tabindex="-1"
          >
            Menu 
            5
          </li>
          <li
            class="charcoal-list-item"
            data-key="6"
            role="option"
            tabindex="-1"
          >
            Menu 
            6
          </li>
          <li
            class="charcoal-list-item"
            data-key="7"
            role="option"
            tabindex="-1"
          >
            Menu 
            7
          </li>
          <li
            class="charcoal-list-item"
            data-key="8"
            role="option"
            tabindex="-1"
          >
            Menu 
            8
          </li>
          <li
            class="charcoal-list-item"
            data-key="9"
            role="option"
            tabindex="-1"
          >
            Menu 
            9
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;
